--- a/package.json
+++ b/package.json
@@ -11,10 +11,14 @@
     "test": "echo \"No test specified\" && exit 0"
   },
   "dependencies": {
+    "@quasar/extras": "^1.1.1",
     "axios": "^0.18.0",
-    "vue-i18n": "^7.3.3"
+    "quasar": "^1.0.0-beta.17",
+    "vue-i18n": "^7.3.3",
+    "yarn": "^1.15.2"
   },
   "devDependencies": {
+    "@quasar/app": "^1.0.0-beta.18",
     "babel-eslint": "^8.2.1",
     "copy-webpack-plugin": "^4.5.2",
     "eslint": "^4.18.2",
@@ -26,7 +30,6 @@
     "eslint-plugin-promise": "^3.7.0",
     "eslint-plugin-standard": "^3.0.1",
     "eslint-plugin-vue": "^4.3.0",
-    "quasar-cli": "^0.17.22",
     "strip-ansi": "=3.0.1",
     "symlink-webpack-plugin": "0.0.4"
   },
