--- a/package.json
+++ b/package.json
@@ -11,23 +11,19 @@
     "test": "echo \"No test specified\" && exit 0"
   },
   "dependencies": {
+    "@quasar/extras": "^1.3.3",
     "axios": "^0.18.0",
+    "quasar": "^1.4.1",
     "vue-i18n": "^7.3.3"
   },
   "devDependencies": {
-    "babel-eslint": "^8.2.1",
+    "@quasar/app": "^1.2.3",
     "copy-webpack-plugin": "^4.5.2",
-    "eslint": "^4.18.2",
-    "eslint-config-standard": "^11.0.0",
-    "eslint-friendly-formatter": "^4.0.1",
-    "eslint-loader": "^2.0.0",
-    "eslint-plugin-import": "^2.9.0",
-    "eslint-plugin-node": "^6.0.1",
-    "eslint-plugin-promise": "^3.7.0",
-    "eslint-plugin-standard": "^3.0.1",
-    "eslint-plugin-vue": "^4.3.0",
-    "quasar-cli": "^0.17.19",
-    "strip-ansi": "=3.0.1",
+    "@vue/eslint-config-standard": "^4.0.0",
+    "babel-eslint": "^10.0.1",
+    "eslint": "^5.10.0",
+    "eslint-loader": "^2.1.1",
+    "eslint-plugin-vue": "^5.0.0",
     "symlink-webpack-plugin": "0.0.4"
   },
   "engines": {
@@ -36,8 +32,6 @@
     "yarn": ">= 1.6.0"
   },
   "browserslist": [
-    "> 1%",
-    "last 2 versions",
-    "not ie <= 10"
+    "last 1 version, not dead, ie >= 11"
   ]
 }
