--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "laravel-quasar-pwa-template",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "A Quasar Framework app",
   "productName": "Quasar App",
   "cordovaId": "org.cordova.quasar.app",
@@ -12,9 +12,13 @@
   },
   "dependencies": {
     "@quasar/extras": "^1.3.3",
-    "axios": "^0.18.0",
+    "axios": "0.19.0",
     "quasar": "^1.4.3",
-    "vue-i18n": "^7.3.3"
+    "vee-validate": "2.2.13",
+    "vue-content-loader": "0.2.2",
+    "vue-signature-pad": "1.1.14",
+    "vuelidate": "0.7.4",
+    "vuex-persistedstate": "2.5.4"
   },
   "devDependencies": {
     "@quasar/app": "^1.2.4",
