--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   "dependencies": {
     "@quasar/extras": "^1.0.0",
     "axios": "0.19.0",
-    "quasar": "^1.5.5",
+    "quasar": "^1.5.8",
     "vee-validate": "2.2.13",
     "vue-content-loader": "0.2.2",
     "vue-i18n": "^8.0.0",
@@ -23,10 +23,14 @@
     "vuex-persistedstate": "2.5.4"
   },
   "devDependencies": {
-    "@quasar/app": "^1.3.3",
+    "@quasar/app": "^1.4.0",
     "@vue/eslint-config-standard": "^4.0.0",
     "babel-eslint": "^10.0.1",
     "copy-webpack-plugin": "^5.0.5",
+    "devtron": "^1.4.0",
+    "electron": "^7.0.0",
+    "electron-debug": "^3.0.0",
+    "electron-devtools-installer": "^2.2.4",
     "eslint": "^5.10.0",
     "eslint-loader": "^2.1.1",
     "eslint-plugin-vue": "^5.0.0",
