--- a/.gitignore
+++ b/.gitignore
@@ -1,36 +1,36 @@
-.quasar
-.DS_Store
-.thumbs.db
-node_modules
-/dist
-/src-cordova/node_modules
-/src-cordova/platforms
-/src-cordova/plugins
-/src-cordova/www
-/src-bex/www
-/src-bex/js/core
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
+/frontend.quasar
+/frontend.DS_Store
+/frontend.thumbs.db
+/frontendnode_modules
+/frontend/dist
+/frontend/src-cordova/node_modules
+/frontend/src-cordova/platforms
+/frontend/src-cordova/plugins
+/frontend/src-cordova/www
+/frontend/src-bex/www
+/frontend/src-bex/js/core
+/frontendnpm-debug.log*
+/frontendyarn-debug.log*
+/frontendyarn-error.log*
 
 #laravel folders/files
-/public/css
-/public/fonts
-/public/img
-/public/js
-/public/statics
-/public/storage
-/public/index.html
-/storage/*.key
-/vendor
-/.idea
-/.vscode
-/.vagrant
-Homestead.json
-Homestead.yaml
-npm-debug.log
-yarn-error.log
-.env
+/backend/public/css
+/backend/public/fonts
+/backend/public/img
+/backend/public/js
+/backend/public/statics
+/backend/public/storage
+/backend/public/index.html
+/backend/storage/*.key
+/backend/vendor
+/backend/.idea
+/backend/.vscode
+/backend/.vagrant
+/backendHomestead.json
+/backendHomestead.yaml
+/backendnpm-debug.log
+/backendyarn-error.log
+/backend.env
 
 # Editor directories and files
 .idea
